Fixed combobox and sticky layout bugs

--- a/src/main/less/vcomet/ui/vc-sticky/vc-sticky.less
+++ b/src/main/less/vcomet/ui/vc-sticky/vc-sticky.less
@@ -2,7 +2,6 @@
 @element: vc-sticky;
 
 .@{element}-stickyWrapper{
-  z-index: 1;
   position: relative;
   height: 100%;
   width: 100%;
